src/objects/Question_Response__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Storing User answers</description>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Set a question score</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>